# Hackathon-SafetyEye

./: README.md  Silhouette-of-Construction-Worker-Industry-PowerPoint-Templates.pptx  main.cpp
detection/: main.cpp
python/: app_gui.py  client_server.py  mainwindow.py  newgui.py  saftey.py
qtNetworkServer/qtNetwork/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
